# swpc_delta

./: .gitignore  CLINERULES.md  Cargo.toml  GEMINI.md  README.md  read_delta.sql
docs/: deltaops.md
solar_wind/: part-00000-e22634bb-0bbb-4d8e-bd5c-740ff4b38326-c000.snappy.parquet
src/: delta.rs  lib.rs  main.rs  swpc.rs
tests/: integration_tests.rs
