[package]
name = "swpc_delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"]}
deltalake = { version = "0.12.0", features = ["azure", "datafusion"] }
object_store = "0.5.6"
rayon = "1.7.0"

