[package]
name = "swpc_delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread"] }
deltalake = { version = "0.12.0", features = ["azure", "datafusion"] }
object_store = "0.5.6"

